--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "gulp-sass": "^3.1.0",
         "gulp-sourcemaps": "^2.6.0",
         "gulp-uglify": "^3.0.0",
+        "gulp-wp-cache-bust": "^1.0.8",
         "jshint": "^2.9.4",
         "jshint-stylish": "^2.2.1",
         "yargs": "^9.0.1"
