bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,11 +8,11 @@ pipelines:
           script:
           - npm install
           - npm run build -- --production
+          artifacts: 
+          - ../$PACKAGE_DIR
       - step:
           name: Deploy Package
           image: mwienk/docker-git-ftp
           script:
-          - cd ..
-          - ls
-          - sftp $DEV_DEPLOY_URL <<< ./$PACKAGE_DIR
+          - sftp $DEV_DEPLOY_URL <<< ../$PACKAGE_DIR
             
