bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,5 +14,6 @@ pipelines:
           name: Deploy Package
           image: atmoz/sftp
           script:
-          - sftp $DEV_DEPLOY_URL <<< ../$PACKAGE_DIR
+          - sftp $DEV_DEPLOY_URL
+          - put ../$PACKAGE_DIR
             
