--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,6 @@ pipelines:
           name: Deploy Package
           image: quay.io/aptible/sftp
           script:
-          - sftp $DEV_DEPLOY_URL /
-          - put ../$PACKAGE_DIR
+          - sftp $DEV_DEPLOY_URL
+          - sftp> put ../$PACKAGE_DIR
             
