--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,7 @@ pipelines:
           name: Deploy Package
           image: quay.io/aptible/sftp
           script:
+          - cd ..
           - sftp $DEV_DEPLOY_URL
-          - sftp> put ../$PACKAGE_DIR
+          - sftp> put ./$PACKAGE_DIR/
             
