bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,8 +14,7 @@ pipelines:
           name: Deploy Package
           image: quay.io/aptible/sftp
           script:
-          - ls
-          - cd ..
+          - cd ../artifact
           - ls
           - sftp $DEV_DEPLOY_URL
           - sftp> put $PACKAGE_DIR/
