--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ pipelines:
           script:
           - npm install
           - npm run build -- --production
-          - scp ../$PACKAGE_DIR/ $DEV_DEPLOY_URL
+          - scp -r ../$PACKAGE_DIR/ $DEV_DEPLOY_URL
           #artifacts: 
           #- ../$PACKAGE_DIR/**
       #- step:
