--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,14 +8,7 @@ pipelines:
           script:
           - npm install
           - npm run build -- --production
-          - scp -r ../$PACKAGE_DIR/ $DEV_DEPLOY_URL
-          #artifacts: 
-          #- ../$PACKAGE_DIR/**
-      #- step:
-       #   name: Deploy Package
-        #  image: quay.io/aptible/sftp
-         # script:
-          #- cd ..
-          #- ls
+          - sftp $DEV_DEPLOY_URL
+          - sftp> put -r ../$PACKAGE_DIR/
           
             
