bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ pipelines:
           script:
           - npm install
           - npm run build -- --production
-          - sftp $DEV_DEPLOY_URL <<< $'put -r '../$PACKAGE_DIR
+          - sftp $DEV_DEPLOY_URL <<< $'rmdir '$PACKAGE_DIR
+          - scp ../$PACKAGE_DIR $DEV_DEPLOY_URL
           
             
