bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,6 @@ pipelines:
           - npm install
           - npm run build -- --production
           - sftp $DEV_DEPLOY_URL <<< $'rmdir '$PACKAGE_DIR
-          - scp ../$PACKAGE_DIR $DEV_DEPLOY_URL
+          - scp -r ../$PACKAGE_DIR $DEV_DEPLOY_URL
           
             
