--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -2,12 +2,54 @@ image: andthensome/docker-node-rsync
 
 pipelines:
   branches:
-    master: 
+    develop:
       - step:
-          name: Build Package
+          name: "Build Package"
+          image: andthensome/docker-node-rsync
+          artifacts:
+            - pipeline/**
+          caches:
+            - node
           script:
-          - npm install
-          - npm run build -- --production
-          - scp -r ../$PACKAGE_DIR $DEV_DEPLOY_URL
-          
-            
+            - "Build Package... 🙌"
+            - "npm install"
+            - "npm run build -- --production --pipeline"
+      #- step:
+      #    name: "Deploy to UAT"
+      #    image: alpacadb/docker-lftp
+      #    trigger: manual
+      #    deployment: staging
+      #    script:
+      #      - echo "Deploying to UAT... 🙌"
+      #      - "lftp $LFTP_infrastructure_user_string -e 'set sftp:auto-confirm yes; mirror -R --parallel=5 --delete --verbose=1 pipeline/ path/to/my/basebuild_theme-package; exit'"
+    master:
+      - step:
+          name: "Build Package"
+          image: andthensome/docker-node-rsync
+          artifacts:
+            - pipeline/**
+          caches:
+            - node
+          script:
+            - "Build Package... 🙌"
+            - "npm install"
+            - "npm run build -- --production --pipeline"
+      #- step:
+      #    name: "Deploy to UAT"
+      #    image: alpacadb/docker-lftp
+      #    trigger: manual
+      #    deployment: staging
+      #    script:
+      #      - "Build Package... 🙌"
+      #      - echo "Deploying to UAT... 🙌"
+      #      - "lftp $LFTP_infrastructure_user_string -e 'set sftp:auto-confirm yes; mirror -R --parallel=5 --delete --verbose=1 pipeline/ path/to/my/basebuild_theme-package; exit'"
+      #- step:
+      #    name: "Deploy to Production"
+      #    image: alpacadb/docker-lftp
+      #    trigger: manual
+      #    deployment: production
+      #    script:
+      #      - "Build Package... 🙌"
+      #      - echo "Deploying to Production... 😬"
+      #      - "lftp $LFTP_infrastructure_user_string -e 'set sftp:auto-confirm yes; mirror -R --parallel=5 --delete --verbose=1 pipeline/ path/to/my/basebuild_theme-package; exit'"
+
