--- a/package.json
+++ b/package.json
@@ -21,25 +21,25 @@
     },
     "homepage": "https://github.com/n/a#readme",
     "devDependencies": {
-        "gulp-autoprefixer": "^4.0.0",
-        "gulp-changed": "^3.1.0",
+        "gulp-autoprefixer": "^6.1.0",
+        "gulp-changed": "^3.2.0",
         "gulp-concat": "^2.6.1",
-        "gulp-debug": "^3.1.0",
+        "gulp-debug": "^4.0.0",
         "gulp-if": "^2.0.2",
-        "gulp-imagemin": "^3.3.0",
-        "gulp-jshint": "^2.0.4",
-        "gulp-modernizr": "^1.0.0-alpha",
-        "gulp-ng-annotate": "^2.0.0",
-        "gulp-sass": "^3.1.0",
-        "gulp-sourcemaps": "^2.6.0",
-        "gulp-uglify": "^3.0.0",
-        "gulp-wp-cache-bust": "^1.0.8",
-        "jshint": "^2.9.4",
+        "gulp-imagemin": "^5.0.3",
+        "gulp-jshint": "^2.1.0",
+        "gulp-modernizr": "^3.2.1",
+        "gulp-ng-annotate": "^2.1.0",
+        "gulp-sass": "^4.0.2",
+        "gulp-sourcemaps": "^2.6.5",
+        "gulp-uglify": "^3.0.2",
+        "gulp-wp-cache-bust": "^1.0.9",
+        "jshint": "^2.10.2",
         "jshint-stylish": "^2.2.1",
-        "yargs": "^9.0.1"
+        "yargs": "^13.2.4"
     },
     "dependencies": {
-        "@fdaciuk/ajax": "^2.3.0",
-        "gulp": "^3.9.1"
+        "@fdaciuk/ajax": "^3.0.4",
+        "gulp": "^4.0.2"
     }
 }
