--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     },
     "homepage": "https://github.com/n/a#readme",
     "devDependencies": {
+        "@babel/core": "^7.6.2",
+        "@babel/preset-env": "^7.6.2",
         "gulp-autoprefixer": "^6.1.0",
+        "gulp-babel": "^8.0.0",
         "gulp-changed": "^4.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-debug": "^4.0.0",
