--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "homepage": "https://github.com/n/a#readme",
     "devDependencies": {
         "@babel/core": "^7.6.2",
+        "@babel/plugin-transform-async-to-generator": "^7.5.0",
+        "@babel/plugin-transform-runtime": "^7.6.2",
         "@babel/preset-env": "^7.6.2",
         "gulp-autoprefixer": "^6.1.0",
         "gulp-babel": "^8.0.0",
@@ -42,6 +44,7 @@
         "yargs": "^13.3.0"
     },
     "dependencies": {
+        "@babel/runtime": "^7.6.3",
         "@fdaciuk/ajax": "^3.0.4",
         "gulp": "^4.0.2"
     }
