--- a/package.json
+++ b/package.json
@@ -21,30 +21,27 @@
     },
     "homepage": "https://github.com/n/a#readme",
     "devDependencies": {
-        "@babel/core": "^7.6.2",
-        "@babel/plugin-transform-async-to-generator": "^7.5.0",
-        "@babel/plugin-transform-runtime": "^7.6.2",
-        "@babel/preset-env": "^7.6.2",
+        "@babel/core": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
+        "autoprefixer": "^9.7.4",
+        "babel-loader": "^8.0.6",
+        "glob": "^7.1.6",
         "gulp-autoprefixer": "^6.1.0",
-        "gulp-babel": "^8.0.0",
-        "gulp-changed": "^4.0.0",
-        "gulp-concat": "^2.6.1",
+        "gulp-changed": "^4.0.2",
         "gulp-debug": "^4.0.0",
         "gulp-if": "^3.0.0",
         "gulp-imagemin": "^6.0.0",
-        "gulp-jshint": "^2.1.0",
-        "gulp-modernizr": "^3.3.0",
-        "gulp-ng-annotate": "^2.1.0",
+        "gulp-postcss": "^8.0.0",
+        "gulp-rename": "^2.0.0",
+        "gulp-replace": "^1.0.0",
         "gulp-sass": "^4.0.2",
         "gulp-sourcemaps": "^2.6.5",
-        "gulp-uglify": "^3.0.2",
-        "gulp-wp-cache-bust": "^1.0.9",
-        "jshint": "^2.10.2",
         "jshint-stylish": "^2.2.1",
-        "yargs": "^13.3.0"
+        "webpack-entry-plus": "^1.0.18",
+        "webpack-stream": "^5.2.1",
+        "yargs": "^15.1.0"
     },
     "dependencies": {
-        "@babel/runtime": "^7.6.3",
         "@fdaciuk/ajax": "^3.0.4",
         "gulp": "^4.0.2"
     }
