--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "gulp": "^4.0.2",
         "jquery": "^3.5.1",
         "owl.carousel": "^2.3.4",
+        "owl.carousel2.thumbs": "^0.1.8",
         "popper.js": "^1.16.1"
     }
 }
