--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-pro": "^6.0.0-beta2",
+        "aos": "^2.3.4",
         "bootstrap": "^4.5.3",
         "flexslider": "^2.7.2",
         "gulp": "^4.0.2",
         "jquery": "^3.5.1",
         "owl.carousel": "^2.3.4",
-        "owl.carousel2.thumbs": "^0.1.8",
         "popper.js": "^1.16.1"
     }
 }
